# machine_learnig

./: estatistica.ipynb  pyproject.toml
Estatistica/: desafio.ipynb  desafio.py  estatistica.ipynb
Primeiro_Modelo/: modelo_diabetes.ipynb
Primeiro_Modelo/Desafio/: modelo_previsao_vendas.ipynb
Primeiro_Modelo_Diabetes/: diretrizes.txt  modelo_diabetes.ipynb
algoritmos_supervisionados/regressao_linear_simples/: modelo_pontuacao.ipynb
eda/: eda_churn.ipynb  manage_Dataset.ipynb
eda/Desafio/: desafio.ipynb
